# kUn

./: .gitignore  CMakeLists.txt  README.md  auto_install_python.sh  build.sh
Main/: CMakeLists.txt  main.cpp  zspython.cpp
Utils/: KunDebugEngine.cpp  KunDebugEngine.h  geometry.h  kalmanfilter.cpp  matrix2d.cpp  matrix2d.h  parammanager.cpp  parammanager.h  setthreadname.cpp  staticparams.h
Utils/Protobuf/: game_event.proto  grSimMessage.proto  grSim_Commands.proto  grSim_Packet.proto  grSim_Replacement.proto  messages_robocup_ssl_detection.proto  messages_robocup_ssl_geometry.proto  (+8 more)
baselines/: actionmodule.py  backup.sh  build.sh  clean.sh  env.py  gamemodule.py  statusmodule.py  train.py  visionmodule.py
baselines_new/: actionmodule.py  visionmodule.py
plugins/: CMakeLists.txt
plugins/Cmd2Sim/: CMakeLists.txt  cmd2sim.cpp  cmd2sim.h
plugins/Decision/: ActionModule.cpp  ActionModule.h  CMakeLists.txt  DecisionModule.cpp  Global.cpp  Global.h  OptionModule.cpp  OptionModule.h  TaskMediator.h  decisionmodule.cpp  decisionmodule.h  decisionplugin.cpp  decisionplugin.h
plugins/Decision/Algorithm/: BallAdvanceDecision.cpp  BallAdvanceDecision.h  BallSpeedModel.cpp  BallStatus.cpp  BallStatus.h  BestPlayer.cpp  BestPlayer.h  CollisionDetect.cpp  CollisionDetect.h  Compensate.cpp  Compensate.h  ContactChecker.cpp  ContactChecker.h  KickDirection.cpp  KickDirection.h  KickParam.cpp  KickParam.h  Neat.cpp  Neat.h  PenaltyPosCleaner.cpp  PenaltyPosCleaner.h  ShootRangeList.cpp  ShootRangeList.h  SituationJudge.cpp  SituationJudge.h  gpuBestAlgThread.cpp  gpuBestAlgThread.h  messidecision.cpp  messidecision.h  receivePos.cpp  receivePos.h  runpos.cpp  runpos.h
plugins/Decision/CUDAModule/: CUDAModule.cpp  CUDAModule.h  SkillUtills.cu
plugins/Decision/LuaModule/: LuaModule.cpp  LuaModule.h  bestalg.pkg  bestplayer.pkg  getluadata.pkg  global.pkg  lua_zeus.cpp  messi.pkg  visionmodule.pkg  worldmodel.pkg  zeus.pkg
plugins/Decision/MotionControl/: CMmotion.cpp  CMmotion.h  ControlModel.cpp  ControlModel.h  DynamicsSafetySearch.cpp  DynamicsSafetySearch.h  TrapezoidalVelTrajectory.cpp  noneTrapzodalVelTrajectory.cpp
plugins/Decision/OtherLibs/cmu/: obstacle.cpp  obstacle.h  path_planner.cpp  path_planner.h
plugins/Decision/PathPlan/: AStarPlanner.cpp  AStarPlanner.h  BezierCurve.cpp  BezierCurve.h  BezierMotion.cpp  BezierMotion.h  ChipBallJudge.cpp  ObstacleNew.cpp  ObstacleNew.h  PathPlanner.cpp  PathPlanner.h  RRTPathPlanner.cpp
plugins/Decision/PointCalculation/: AssistPoint.cpp  AssistPoint.h  AtomPos.cpp  AtomPos.h  CornerAreaPos.cpp  CornerAreaPos.h  DefPos1G2D.cpp  DefPos1G2D.h  DefPos2015.cpp  DefPos2015.h  DefaultPos.cpp  DefaultPos.h  GoaliePosV1.cpp  GoaliePosV1.h  IndirectDefender.cpp  IndirectDefender.h  KickOffDefPosV2.cpp  KickOffDefPosV2.h  MarkingPosV2.cpp  MarkingPosV2.h  MarkingTouchPos.cpp  MarkingTouchPos.h  SupportPos.cpp  SupportPos.h  TandemPos.cpp  TouchKickPos.cpp  TouchKickPos.h  WaitKickPos.cpp  WaitKickPos.h
plugins/Decision/PythonModule/: PythonModule.cpp  PythonModule.h
plugins/Decision/RefereeBox/: RefereeBoxIf.cpp  RefereeBoxIf.h  game_state.h
plugins/Decision/Simulator/: CommandInterface.cpp  CommandInterface.h  server.h
plugins/Decision/Strategy/bayes/: BayesFilter.cpp  BayesFilter.h  BayesParam.cpp  BayesParam.h  BayesReader.cpp  BayesReader.h  MatchState.cpp
plugins/Decision/Strategy/defence/: Attribute.h  AttributeSet.cpp  AttributeSet.h  DefenceInfo.cpp  DefenceInfo.h  EnemyDefendTacticAnalys.cpp  EnemyDefendTacticAnalys.h  EnemyDefendTacticArea.cpp  EnemyDefendTacticArea.h  EnemySituation.h  OppAttributesFactory.cpp  OppAttributesFactory.h  OppPlayer.cpp  OppPlayer.h  OppRole.h  OppRoleFactory.cpp  OppRoleFactory.h  OppRoleMatcher.cpp  OppRoleMatcher.h  Trigger.cpp  Trigger.h
plugins/Decision/Strategy/rolematch/: munkresTacticPositionMatcher.cpp
plugins/Decision/Strategy/skill/: AdvanceBallV1.cpp  AdvanceBallV1.h  AdvanceBallV2.cpp  AdvanceBallV2.h  ChaseKickV2.cpp  ChaseKickV2.h  CmuTurnKickV1.cpp  CmuTurnKickV1.h  CrazyPush.h  DribbleTurn.cpp  DribbleTurn.h  DribbleTurnKick.cpp  Factory.cpp  Factory.h  GetBallV3.cpp  GetBallV3.h  GetBallV4.cpp  GetBallV4.h  GoAndTurnKickV3.cpp  GoAndTurnKickV3.h  GoAndTurnKickV4.cpp  GoAndTurnKickV4.h  GoAvoidShootLine.cpp  GoImmortalRush.cpp  GoImmortalRush.h  GotoPosition.cpp  GotoPosition.h  GotoPositionNew.cpp  GotoPositionNew.h  HoldBall.cpp  HoldBall.h  InterceptBallV3.cpp  InterceptBallV3.h  InterceptBallV7.cpp  InterceptBallV7.h  InterceptTouch.cpp  InterceptTouch.h  Marking.cpp  Marking.h  MarkingFront.cpp  (+40 more)
plugins/Decision/Utils/: DefendUtils.cpp  DefendUtils.h  FreeKickUtils.cpp  FreeKickUtils.h  GDebugEngine.cpp  GDebugEngine.h  NormalPlayUtils.cpp  SkillUtils.cpp  SkillUtils.h  ValueRange.h  misc_types.h  os_param.h  param.cpp  param.h  utils.cpp  utils.h
plugins/Decision/Vision/: BallPredictor.cpp  BallPredictor.h  CollisionSimulator.cpp  FilteredObject.cpp  FilteredObject.h  RobotPredictData.h  RobotPredictError.cpp  RobotPredictor.cpp  RobotPredictor.h  RobotsCollision.cpp  RobotsCollision.h  VisionModule.cpp  VisionModule.h  VisionReceiver.cpp  VisionReceiver.h
plugins/Decision/Vision/mediator/net/: message.h
plugins/Decision/Wireless/: CommControl.h  CommandFactory.h  PlayerCommandV2.cpp  PlayerCommandV2.h  RobotSensor.cpp  RobotSensor.h
plugins/Decision/WorldModel/: DribbleStatus.h  GetLuaData.cpp  GetLuaData.h  KickStatus.h  PlayInterface.cpp  PlayInterface.h  RobotCapability.cpp  RobotCapability.h  WorldDefine.h  WorldModel.h  WorldModel_basic.cpp  WorldModel_enemy.cpp  WorldModel_lua.cpp  WorldModel_utils.cpp  robot_power.h
plugins/Sim/: CMakeLists.txt  config.h  configwidget.cpp  configwidget.h  robot.cpp  robot.h  sslworld.cpp  sslworld.h
plugins/UDPReceiver/: CMakeLists.txt  udpreceiver.cpp  udpreceiver.h
plugins/UDPSender/: CMakeLists.txt  udpsender.cpp  udpsender.h
plugins/Vision/: CMakeLists.txt  messageformat.h  tinyvisionformat.h  visionmodule.cpp  visionmodule.h  visionplugin.cpp  visionplugin.h
python/: build.sh  env.py  train.py
(+8 files in other folders)
